--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tỏ Tình</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tỏ tình cute</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Anh có điều bất ngờ muốn nói với em ❤️</h1>
 
-  <div class="heart"></div>
+    <div class="container">
+        <div class="heart"></div>
 
-  <button id="surpriseBtn">Bất ngờ nè</button>
+        <h1>Cho mình làm người đặc biệt nhé 💗</h1>
+        <p>Mình có điều muốn nói với bạn...</p>
 
-  <div id="messageBox" class="hidden">
-    <p>Em à… Anh thích em rất nhiều… Làm người yêu anh nhé? 💘</p>
-  </div>
+        <button class="btn">Nhấn để tỏ tình</button>
+    </div>
 
-  <script src="script.js"></script>
 </body>
 </html>
