--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       top: 40px;
       left: 40px;
     }
+<div class="heart" aria-hidden="true">
+  <div class="mid"></div>
+</div>
 
     @keyframes pulse {
       0%   { transform: rotate(-45deg) scale(1); }
