--- a/index.html
+++ b/index.html
@@ -1,209 +1,176 @@
 <!doctype html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>WO AI NI</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg:#fff0f6;
-      --pink1:#ff8fb1;
-      --pink2:#ff4d9e;
-      --accent:#ffe6f0;
-      --text:#3b2b3b;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family:Montserrat,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-      background:linear-gradient(180deg,var(--bg),#ffeef8 60%);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:2rem;
-      color:var(--text);
-    }
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>WO AI NI — SVG Heart</title>
+<style>
+  :root{
+    --bg: #fff0f6;
+    --card-bg: linear-gradient(180deg, rgba(255,255,255,0.95), rgba(255,245,250,0.9));
+    --pink1: #ff8fb1;
+    --pink2: #ff4d9e;
+    --shadow: rgba(255,77,158,0.12);
+    --text: #4a2b3a;
+  }
 
-    .card{
-      width:100%;
-      max-width:760px;
-      background:linear-gradient(180deg,rgba(255,255,255,0.9),rgba(255,245,250,0.85));
-      border-radius:22px;
-      padding:36px;
-      box-shadow:0 10px 30px rgba(255,77,158,0.12);
-      position:relative;
-      overflow:visible;
-      text-align:center;
-    }
+  *{box-sizing:border-box}
+  html,body{height:100%}
+  body{
+    margin:0;
+    font-family: Inter, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    background: linear-gradient(180deg, var(--bg), #ffeef8 60%);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    padding:20px;
+    color:var(--text);
+  }
 
-    /* Heart */
-    .heart {
-      width: 100px; /* Điều chỉnh kích thước trái tim */
-      height: 90px;
-      position: relative;
-      margin: 0 auto 18px;
-      animation: pulse 1.3s ease-in-out infinite;
-    }
+  .card{
+    width:100%;
+    max-width:720px;
+    background: var(--card-bg);
+    border-radius:20px;
+    padding:28px;
+    box-shadow: 0 14px 30px var(--shadow);
+    text-align:center;
+    position:relative;
+    overflow:hidden;
+  }
 
-    .heart:before,
-    .heart:after {
-      position: absolute;
-      content: '';
-      left: 50px;
-      top: 0;
-      width: 50px;
-      height: 80px;
-      background: var(--pink2);
-      border-radius: 50px 50px 0 0;
-      transform: rotate(-45deg);
-      transform-origin: 0 100%;
-    }
+  /* SVG heart: scales perfectly because of viewBox */
+  .heart-svg{
+    width: clamp(80px, 15vw, 160px);
+    height: auto;
+    display:block;
+    margin: 0 auto 12px;
+    filter: drop-shadow(0 6px 18px rgba(255,77,158,0.12));
+    transition: transform .22s ease;
+  }
+  .heart-svg:hover{ transform: scale(1.06); }
 
-    .heart:after {
-      left: 0;
-      transform: rotate(45deg);
-      transform-origin: 100% 100%;
-    }
+  h1{
+    margin:6px 0 6px;
+    font-size: clamp(18px, 2.6vw, 28px);
+    font-weight:800;
+    color: #5a2940;
+  }
+  p.lead{
+    margin:0 0 16px;
+    font-size: clamp(13px, 1.8vw, 15px);
+    opacity:0.95;
+    line-height:1.45;
+    max-width:520px;
+    margin-left:auto;
+    margin-right:auto;
+  }
 
+  .btn{
+    display:inline-block;
+    background: linear-gradient(90deg, var(--pink2), #ff6fb0);
+    color:#fff;
+    padding:10px 18px;
+    border-radius:999px;
+    text-decoration:none;
+    font-weight:700;
+    border:none;
+    cursor:pointer;
+    box-shadow:0 8px 18px rgba(255,77,158,0.16);
+  }
 
-    @keyframes pulse {
-      0%   { transform: scale(1); }
-      50%  { transform: scale(1.08); }
-      100% { transform: scale(1); }
-    }
+  .confession{
+    margin-top:16px;
+    display:none;
+    padding:14px 16px;
+    border-radius:12px;
+    background: linear-gradient(180deg, rgba(255,245,250,0.85), rgba(255,238,246,0.7));
+    border:1px solid rgba(255,77,158,0.06);
+    color:#5a2940;
+    font-size:15px;
+    line-height:1.5;
+  }
 
-    h1{margin:6px 0 8px;font-size:28px;font-weight:900;color:#5a2940}
-    p.lead{margin:0 0 18px;font-size:15px;opacity:0.95}
+  .actions{
+    margin-top:12px;
+    display:flex;
+    gap:10px;
+    justify-content:center;
+  }
 
-    .btn{
-      display:inline-block;
-      background:linear-gradient(90deg,var(--pink2),#ff6fb0);
-      border:none;
-      color:white;
-      padding:12px 18px;
-      border-radius:999px;
-      font-weight:700;
-      cursor:pointer;
-      box-shadow:0 6px 18px rgba(255,77,158,0.16);
-      transition:transform .14s ease, box-shadow .14s ease;
-      text-decoration:none;
-    }
-    .btn:active{transform:translateY(2px) scale(.995);}
-
-    .confession{
-      margin-top:18px;
-      font-size:18px;
-      line-height:1.5;
-      padding:16px 20px;
-      border-radius:14px;
-      background:linear-gradient(180deg, rgba(255,245,250,0.8), rgba(255,238,246,0.6));
-      border:1px solid rgba(255,77,158,0.08);
-      box-shadow:inset 0 -6px 12px rgba(255,197,221,0.4);
-      display:none;
-      color:#5a2940;
-    }
-
-    .small{font-size:13px; opacity:0.8}
-
-    /* floating tiny hearts */
-    .floaters{
-      position:absolute; inset:0; pointer-events:none;
-    }
-    .floater{
-      position:absolute; width:18px; height:18px; transform:rotate(-45deg);
-      opacity:0; animation: floatUp 4000ms linear infinite;
-    }
-    .floater:before, .floater:after{content:"";position:absolute;width:18px;height:18px;border-radius:50%;background:linear-gradient(135deg,var(--pink1),var(--pink2))}
-    .floater:before{left:0; top:-9px}
-    .floater:after{left:9px; top:0}
-    @keyframes floatUp{
-      0%{transform:translateY(40px) rotate(-45deg); opacity:0}
-      10%{opacity:1}
-      60%{opacity:0.85}
-      100%{transform:translateY(-180px) rotate(-45deg); opacity:0}
-    }
-
-    /* responsive */
-    @media (max-width:540px){
-      .heart{width:160px;height:140px}
-      .heart:before,.heart:after{width:160px;height:160px}
-      h1{font-size:22px}
-    }
-  </style>
+  /* small responsive tweaks */
+  @media (max-width:420px){
+    .card{padding:18px;}
+    .heart-svg{width: clamp(70px, 20vw, 120px);}
+  }
+</style>
 </head>
 <body>
-  <div class="card" role="main">
-    <div class="floaters" aria-hidden="true">
-      <div class="floater" style="left:12%; animation-delay:0s"></div>
-      <div class="floater" style="left:28%; width:24px;height:24px; animation-delay:0.8s"></div>
-      <div class="floater" style="left:66%; animation-delay:1.3s"></div>
-      <div class="floater" style="left:84%; width:20px;height:20px; animation-delay:2s"></div>
-    </div>
+  <main class="card" role="main" aria-labelledby="title">
+    <!-- SVG heart (vector) -->
+    <svg class="heart-svg" viewBox="0 0 24 24" role="img" aria-hidden="false" aria-labelledby="heartTitle">
+      <title id="heartTitle">Trái tim hồng</title>
+      <defs>
+        <linearGradient id="g" x1="0" x2="1" y1="0" y2="1">
+          <stop offset="0" stop-color="#ff7aa6"/>
+          <stop offset="1" stop-color="#ff4d9e"/>
+        </linearGradient>
+      </defs>
+      <path fill="url(#g)" d="M12.001 21.35c-.4-.36-9.6-8.41-9.6-12.38C2.401 6.05 4.91 3.5 8.002 3.5c1.82 0 3.45.99 4.332 2.5C13.749 4.49 15.38 3.5 17.2 3.5c3.09 0 5.6 2.55 5.6 5.47 0 3.96-9.2 12.97-9.999 12.88-.1-.02-.2-.08-.3-.12z"/>
+    </svg>
 
-    <div class="heart" aria-hidden="true"></div>
-
-    <h1>Cho mình làm người đặc biệt nhé 💖</h1>
+    <h1 id="title">Cho mình làm người đặc biệt nhé 💖</h1>
     <p class="lead">Mình có điều muốn nói — nhấn nút bên dưới để nhận lời tỏ tình dễ thương này.</p>
 
-    <button class="btn" id="reveal">Nhấn để tỏ tình</button>
+    <div>
+      <button class="btn" id="reveal">Nhấn để tỏ tình</button>
+    </div>
 
-    <div class="confession" id="text">
+    <div class="confession" id="text" aria-live="polite">
       <strong>Xin chào 💕</strong><br>
       Mình thích bạn — thích từ những điều nhỏ nhất: nụ cười, cách bạn hay quan tâm, và cả những phút im lặng cùng nhau. 
       Nếu bạn chịu, mình muốn được bên bạn, chia sẻ mọi thứ và làm cho bạn cười mỗi ngày. <br><br>
-      <span class="small">(Nếu bạn muốn, nhấn nút sao chép để gửi nhanh cho crush của bạn.)</span>
+      <span style="font-size:13px; opacity:0.85;">(Nhấn "Sao chép" để gửi nhanh cho crush của bạn.)</span>
     </div>
 
-    <div style="margin-top:12px; display:flex; gap:10px; justify-content:center;">
-      <button class="btn" id="copy" style="background:linear-gradient(90deg,#ff7aa6,#ff4d9e); display:none">Sao chép lời nhắn</button>
-      <a class="btn" id="reset" style="background:linear-gradient(90deg,#ffd1e8,#ff9ec6); display:none">Làm lại</a>
+    <div class="actions" id="actions" style="display:none;">
+      <button class="btn" id="copy">Sao chép lời nhắn</button>
+      <button class="btn" id="reset" style="background: linear-gradient(90deg,#ffd1e8,#ff9ec6); color:#5a2940;">Làm lại</button>
     </div>
-  </div>
+  </main>
 
-  <script>
-    const btn = document.getElementById('reveal');
-    const text = document.getElementById('text');
-    const copy = document.getElementById('copy');
-    const reset = document.getElementById('reset');
+<script>
+  const btn = document.getElementById('reveal');
+  const text = document.getElementById('text');
+  const actions = document.getElementById('actions');
+  const copyBtn = document.getElementById('copy');
+  const resetBtn = document.getElementById('reset');
 
-    btn.addEventListener('click', ()=>{
-      text.style.display='block';
-      copy.style.display='inline-block';
-      reset.style.display='inline-block';
-      btn.style.transform='scale(.98)';
-      setTimeout(()=>btn.style.transform='',200);
-      // nice little confetti hearts
-      for(let i=0;i<8;i++){
-        const el=document.createElement('div');
-        el.className='floater';
-        el.style.left=(20+Math.random()*60)+'%';
-        el.style.top=(40+Math.random()*20)+'%';
-        el.style.animationDuration=(3000+Math.random()*2200)+'ms';
-        el.style.animationDelay=(Math.random()*600)+'ms';
-        document.querySelector('.card').appendChild(el);
-        setTimeout(()=>el.remove(),4200);
-      }
-    });
+  btn.addEventListener('click', ()=>{
+    text.style.display = 'block';
+    actions.style.display = 'flex';
+    btn.disabled = true;
+    btn.style.transform = 'scale(.98)';
+    setTimeout(()=>btn.style.transform = '',160);
+  });
 
-    copy.addEventListener('click', async ()=>{
-      const msg = text.innerText.replace(/\n\s*/g,' ');
-      try{
-        await navigator.clipboard.writeText(msg);
-        copy.textContent='Đã sao chép!';
-        setTimeout(()=>copy.textContent='Sao chép lời nhắn',1400);
-      }catch(e){
-        copy.textContent='Không sao chép được';
-        setTimeout(()=>copy.textContent='Sao chép lời nhắn',1400);
-      }
-    });
+  copyBtn.addEventListener('click', async ()=>{
+    const msg = text.innerText.replace(/\n\s*/g,' ');
+    try{
+      await navigator.clipboard.writeText(msg);
+      copyBtn.textContent = 'Đã sao chép!';
+      setTimeout(()=>copyBtn.textContent = 'Sao chép lời nhắn', 1400);
+    }catch(e){
+      copyBtn.textContent = 'Không sao chép được';
+      setTimeout(()=>copyBtn.textContent = 'Sao chép lời nhắn', 1400);
+    }
+  });
 
-    reset.addEventListener('click', ()=>{
-      text.style.display='none';
-      copy.style.display='none';
-      reset.style.display='none';
-    });
-  </script>
+  resetBtn.addEventListener('click', ()=>{
+    text.style.display = 'none';
+    actions.style.display = 'none';
+    btn.disabled = false;
+  });
+</script>
 </body>
 </html>
