--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>WO AI NI — SVG Heart</title>
+<title>WO AI NI=)))</title>
 <style>
   :root{
     --bg: #fff0f6;
